<resources>
    <string name="app_name">Tarifa General</string>
    <string name="capitulos">Capitulos</string>
    <string name="search">Buscar</string>
    <string name="id_chapter">1</string>
    <string name="chapter">00</string>
    <string name="chapterDescr">Sin descripción.</string>

    <string name="idTariffChapter">idTariffChapter</string>
    <string name="tariffChapterCode">tariffChapterCode</string>
    <string name="tariffChapterDescription">tariffChapterDescription</string>
    <string name="iconChapter">iconChapter</string>
    <string name="idCapitulo">Capítulo :</string>
    <string name="partida">Partidas</string>
    <string name="parti">Partida :</string>
    <string name="subparti">Subpartida :</string>
    <string name="fracc">Fracción :</string>

    <string name="idSubheading">Partida : </string>
    <string name="subheading">1234</string>
    <string name="id_heading">2</string>
    <string name="subheadingDescr">Sin descripción.</string>

    <string name="subheadings">Subpartidas :</string>
    <string name="idTariffHeading">idTariffHeading</string>
    <string name="tariffHeadingCode">tariffHeadingCode</string>
    <string name="tariffHeadingDescription">tariffHeadingDescription</string>


    <string name="tvSubpartida">Subpartida :  </string>
    <string name="subpartida">123456</string>
    <string name="id_subpartida">2</string>
    <string name="subpartidaDesc">Sin descripción.</string>

    <string name="idTariffSubheading">idTariffSubheading</string>
    <string name="tariffSubheadingCode">tariffSubheadingCode</string>
    <string name="tariffSubheadingDescription">tariffSubheadingDescription</string>
    <string name="fracciones">Fracciones</string>

    <string name="tvInformation">Información General </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
