<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sistemascasa.tigie.SubheadingsActivity">

    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar">
    </include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/miActionBar"
        android:background="@color/colorDiverColor"
        android:id="@+id/rlSubEncabezado">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/cap_01"
            android:id="@+id/ivIconChapSubHead"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="17dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvSubheading"
            android:text="@string/idSubheading"
            style="@style/styleChapitulo"
            android:textSize="@dimen/text_chapters"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/ivIconChapSubHead"
            android:layout_toEndOf="@+id/ivIconChapSubHead"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idTariffheading"
            android:text="@string/id_heading"
            android:layout_below="@+id/tvSubheading"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:visibility="invisible"
            android:textSize="@dimen/text_chapters"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tariffSubheadingCode"
            android:text="@string/subheading"
            android:textSize="@dimen/text_chapters"
            android:textStyle="bold"
            style="@style/styleChapituloCode"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/tvSubheading"
            android:layout_alignStart="@+id/tvSubheading"
            android:layout_marginLeft="84dp"
            android:layout_marginStart="84dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tariffSuheadingDescription"
            android:text="@string/subheadingDescr"
            android:textSize="@dimen/text_chapters_act"
            style="@style/styleChapterDescr"
            android:paddingTop="15dp"
            android:layout_alignTop="@+id/ivIconChapSubHead"
            android:layout_alignLeft="@+id/tvSubheading"
            android:layout_alignStart="@+id/tvSubheading" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvSubheadings"
        android:text="@string/subheadings"
        style="@style/styleChapituloCode"
        android:layout_below="@+id/rlSubEncabezado"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="@dimen/text_chapters"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvSubheadings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvSubheadings"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right"
        android:paddingTop="@dimen/padding_top">
    </android.support.v7.widget.RecyclerView>


</RelativeLayout>
