<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/cvSubeadings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/cardview_default_elevation"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/cap_01"
                android:id="@+id/ivSubHeadingIcon"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                />

            <TextView
                android:id="@+id/tvSubheadingDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chapterDescr"
                style="@style/styleChapterDescr"
                android:textSize="@dimen/text_chapters"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:paddingLeft="5dp"
                android:layout_gravity="center_vertical|right"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/tvSubheadingCode"
                android:layout_toEndOf="@+id/tvSubheadingCode" />

            <TextView
                android:id="@+id/tvSubheadingCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chapter"
                style="@style/styleChapter"
                android:textSize="@dimen/text_chapters"
                android:textStyle="bold"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/ivSubHeadingIcon"
                android:layout_toEndOf="@+id/ivSubHeadingIcon" />

            <TextView
                android:id="@+id/tvIdTariffSubheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_chapter"
                style="@style/styleChapterDescr"
                android:visibility="invisible"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tvSubheadingDescription"
                android:layout_toEndOf="@+id/tvSubheadingDescription" />


            <TextView
                android:id="@+id/tvIdTariffHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:visibility="invisible"
                android:layout_alignBaseline="@+id/tvSubheadingDescription"
                android:layout_alignBottom="@+id/tvSubheadingDescription"
                android:layout_toRightOf="@+id/tvIdTariffSubheading"
                android:layout_toEndOf="@+id/tvIdTariffSubheading" />

            <TextView
                android:id="@+id/tvIdTariffPreSubheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:visibility="invisible"
                android:layout_alignBaseline="@+id/tvSubheadingDescription"
                android:layout_alignBottom="@+id/tvSubheadingDescription"
                android:layout_toRightOf="@+id/tvIdTariffHeading"
                android:layout_toEndOf="@+id/tvIdTariffHeading" />

        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>